src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Account_orderproduct__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Order.AccountId, Order.Account.Name)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <formula>Shipped_Product__r.Accounting_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowSubstitutesIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the ERP is allowed to send the substituted product based on the Substitution relationship setup for the Ordered Product in the ERP system</description>
        <label>AllowSubstitutesIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <formula>Shipped_Product__r.Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOrderCancelDate__c</fullName>
        <label>BackOrderCancelDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BackOrderQuantity__c</fullName>
        <label>BackOrderQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CanceledQuantity__c</fullName>
        <description>Quantity that has been cancelled</description>
        <label>CanceledQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delayed_Order_Item__c</fullName>
        <description>Delayed Record (Older than a week and in Entered Status)</description>
        <formula>IF (DATEVALUE(CreatedDate) +7 &gt; TODAY() &amp;&amp; ISPICKVAL(Status__c,&quot;Entered&quot;) , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Delayed Record (Older than a week and in Entered Status)</inlineHelpText>
        <label>Delayed Order Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Product_System_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to indicate wheather the associated digital product in the product family has been automatically added</description>
        <label>Digital Product System Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateOverrideIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator present for when there is a duplicate override</description>
        <label>DuplicateOverrideIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_Order_Number__c</fullName>
        <description>order number from ERP</description>
        <label>ERP Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_SYSTEM__c</fullName>
        <label>ERP SYSTEM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceShipIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the ERP system should disregard any rules with the ERP&apos;s Order processing module that would normally prevent the order from flowing to the warehouse and automatically send it to the warehouse for fulfillment.</description>
        <label>ForceShipIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Copy_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Copy Sub Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISBN10__c</fullName>
        <formula>Shipped_Product__r.SBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISBN10</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN13__c</fullName>
        <description>This is the ISBN13 related to the product</description>
        <formula>Shipped_Product__r.ISBN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISBN13</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <description>this field generate an unique Id for the Item inside the order. this field should not be editable directly by the user. It is automatically assigned upon the status of the order is changed to Open</description>
        <externalId>true</externalId>
        <label>Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product/Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Older_than_a_week__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Older than a week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Product_Comments__c</fullName>
        <description>This is used to store the comments of the approvers of the order line items</description>
        <label>Order Product Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Product_Notes__c</fullName>
        <formula>Order.Order_Notes__c</formula>
        <label>Order Product Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderedQuantity__c</fullName>
        <description>Quantity that has been ordered</description>
        <label>OrderedQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Selling_Account_orderproduct__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;  Order.Account.Primary_Selling_Account__r.Id,  Order.Account.Primary_Selling_Account__r.Name)</formula>
        <label>Primary Selling Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <formula>PricebookEntry.Product2.Name</formula>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFERENCE__c</fullName>
        <label>REFERENCE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictionOverrideIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ndicates if the Sampling Restriction evaluation rule executed within the Order Processing module should be skipped when determining if the line item should be sent to the warehouse for fulfillment</description>
        <label>RestrictionOverrideIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_ID__c</fullName>
        <label>Sequence ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippableQuantity__c</fullName>
        <label>ShippableQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippedQuantity__c</fullName>
        <label>ShippedQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product actually shipped to the client</description>
        <label>Shipped Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth Class Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House Mail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code_Text__c</fullName>
        <externalId>true</externalId>
        <label>Source Code Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code__c</fullName>
        <formula>MID(Shipped_Product__r.Accounting_Code__c, 1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Code_del__c</fullName>
        <description>This is used to store the source code value send from UOPS</description>
        <label>Source Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Shows reason for a status at line item level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Order line item status that gets updated automatically</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resend Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shippable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <formula>IF( PricebookEntry.Product2.AIV_Indicator__c , &apos;AIV&apos;,  
IF( ISPICKVAL(PricebookEntry.Product2.Category2__c, &apos;CourseSmart&apos;)  , &apos;CourseSmart&apos;, 
IF( ISPICKVAL(PricebookEntry.Product2.Category2__c, &apos;CourseSmart (Review Only)&apos;) , &apos;CourseSmart&apos;, 
IF( ISPICKVAL(PricebookEntry.Product2.Status__c, &apos;AOD&apos;), &apos;AOD&apos;, &apos;UOPS&apos;) ) ) )</formula>
        <label>Target System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleStatusOverrideIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates title status override</description>
        <label>TitleStatusOverrideIndicator</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Line_Items</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <label>All Line Items</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Custom_V</fullName>
        <columns>OrderItemNumber</columns>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Requires Approval,Backordered,Cancelled,Entered,On Hold,Processed</value>
        </filters>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>V</value>
        </filters>
        <label>Custom - V</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_0</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>0</value>
        </filters>
        <label>Higher Ed - 0</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_1</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>1</value>
        </filters>
        <label>Higher Ed - 1</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_D</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>D</value>
        </filters>
        <label>Higher Ed - D</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_G</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>G</value>
        </filters>
        <label>Higher Ed - G</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_J</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>J</value>
        </filters>
        <label>Higher Ed - J</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_L</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>L</value>
        </filters>
        <label>Higher Ed - L</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_M</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>M</value>
        </filters>
        <label>Higher Ed - M</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_Q</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>Q</value>
        </filters>
        <label>Higher Ed - Q</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Higher_Ed_R</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>R</value>
        </filters>
        <label>Higher Ed - R</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_2</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>2</value>
        </filters>
        <label>PTG - 2</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_3</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>3</value>
        </filters>
        <label>PTG - 3</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_H</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>H</value>
        </filters>
        <label>PTG - H</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_T</fullName>
        <columns>Source_Code__c</columns>
        <columns>Product2</columns>
        <columns>Status__c</columns>
        <columns>Quantity</columns>
        <columns>OrderItem.CreatedBy.Alias</columns>
        <columns>OrderItem.CreatedDate</columns>
        <columns>Shipping_Method__c</columns>
        <columns>UnitPrice</columns>
        <columns>ListPrice</columns>
        <columns>TotalPrice</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_Code__c</field>
            <operation>contains</operation>
            <value>T</value>
        </filters>
        <label>PTG - T</label>
        <language>en_US</language>
        <sharedTo>
            <group>US_HE_All</group>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Integer_value_for_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR(Quantity  ) != Quantity &amp;&amp;  !($Setup.Bypass_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
        <errorMessage>Please enter numbers without decimals in the Quantity  field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_on_Quantity_than_can_be_entered</fullName>
        <active>true</active>
        <description>This is to prevent the setting of value of Quantity grater than 500.</description>
        <errorConditionFormula>Quantity  &gt; 500 &amp;&amp; !( $Setup.Bypass_Settings__c.Disable_Validation_Rules__c )</errorConditionFormula>
        <errorMessage>You cannot enter a quantity greater than 500</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_of_Record</fullName>
        <active>false</active>
        <description>This is used to prevent change of record field values except for Status Field</description>
        <errorConditionFormula>AND(!ISNEW() ,OR(ISCHANGED( Product2Id ),ISCHANGED( Quantity ),ISCHANGED(  OrderId ),ISCHANGED(  UnitPrice),ISCHANGED(  ERP_Order_Number__c),ISCHANGED(ISBN13__c),ISCHANGED(StatusReason__c),ISCHANGED(RequestShipMethodCode__c),ISCHANGED(ForceShipIndicator__c),ISCHANGED(RestrictionOverrideIndicator__c),ISCHANGED(ForceShipIndicator__c),ISCHANGED(DuplicateOverrideIndicator__c),ISCHANGED(TitleStatusOverrideIndicator__c),ISCHANGED(Description),ISCHANGED(Target_System__c)))</errorConditionFormula>
        <errorMessage>You are only allowed to change the Status Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test</fullName>
        <active>false</active>
        <errorConditionFormula>1==1</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>error test</errorMessage>
    </validationRules>
</CustomObject>